<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_top"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimaryContainer"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="-5dp"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_back_filled_24"
            app:layout_constraintBottom_toBottomOf="@id/btn_delete"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/btn_delete" />

        <Button
            android:id="@+id/btn_delete"
            style="?attr/materialIconButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/delete"
            app:icon="@drawable/ic_delete_filled_24"
            app:layout_constraintEnd_toStartOf="@id/btn_edit"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_edit"
            style="?attr/materialIconButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/edit"
            app:icon="@drawable/ic_edit_filled_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_delete"
            tools:text="@string/dummy_classroom_name" />

        <TextView
            android:id="@+id/tv_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@id/tv_name"
            app:layout_constraintTop_toBottomOf="@id/tv_name"
            tools:text="@string/dummy_classroom_day" />

        <TextView
            android:id="@+id/tv_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_day"
            app:layout_constraintStart_toEndOf="@id/tv_day"
            app:layout_constraintTop_toTopOf="@id/tv_day"
            tools:text="@string/dummy_classroom_start_time" />

        <TextView
            android:id="@+id/tv_end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_day"
            app:layout_constraintStart_toEndOf="@id/tv_start_time"
            app:layout_constraintTop_toTopOf="@id/tv_day"
            tools:text="@string/dummy_classroom_end_time" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_search"
            style="@style/Widget.Material3.CardView.Outlined"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@id/btn_filter"
            app:layout_constraintStart_toStartOf="@id/tv_name"
            app:layout_constraintTop_toBottomOf="@id/tv_day">

            <androidx.appcompat.widget.SearchView
                android:id="@+id/sv_events"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:focusable="false"
                android:inputType="none"
                app:iconifiedByDefault="false"
                app:queryBackground="@android:color/transparent"
                app:queryHint="Search events" />
        </com.google.android.material.card.MaterialCardView>

        <Button
            android:id="@+id/btn_filter"
            style="?attr/materialIconButtonFilledStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/filter"
            app:icon="@drawable/ic_filter_24"
            app:layout_constraintBottom_toBottomOf="@id/card_search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/card_search" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_events"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_top"
        tools:listitem="@layout/item_event" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/add_events"
        android:src="@drawable/ic_add_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ProgressBar
        android:id="@+id/classroom_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:padding="8dp"
        android:background="@drawable/custom_bg_rounded_white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/layout_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/events_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:background="@drawable/custom_bg_rounded_white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_top" />

    <ImageView
        android:id="@+id/iv_no_data"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/no_events"
        android:src="@drawable/empty_list"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/tv_title_no_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_top"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tv_title_no_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/no_events"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/tv_subtitle_no_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_no_data" />

    <TextView
        android:id="@+id/tv_subtitle_no_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/msg_no_events"
        android:textAlignment="center"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_no_data" />

</androidx.constraintlayout.widget.ConstraintLayout>